monitoring/grafana/grafanaingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
   # cert-manager.io/cluster-issuer: andrew-clusterissuer
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: grafana-k8s.ust.inc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              name: http
  #tls:
  #- hosts:
  #  - argocd.ustinovich.online
  #  secretName: argocd-server-tls # as expected by argocd-server
